--- a/patch-servers-with-package-exclusion.yaml
+++ b/patch-servers-with-package-exclusion.yaml
@@ -72,3 +72,13 @@
         insertafter: EOF
       delegate_to: localhost
       when: ansible_distribution in ["RedHat", "Rocky", "AlmaLinux"]
+
+    - name: Reboot immediately if there was a change.
+      shell: "sleep 5 && reboot"
+      async: 1
+      poll: 0
+
+    - name: Wait for the reboot to complete if there was a change.
+      wait_for_connection:
+        delay: 60
+        timeout: 300
