--- a/server-information.yaml
+++ b/server-information.yaml
@@ -73,3 +73,18 @@
         line: "Memory Utilization of the server {{ inventory_hostname }} is {{ memory_status.stdout_lines | default({}) | to_nice_json }}"
         insertafter: EOF
       delegate_to: localhost
+
+    - name: List installed packages on all the Linux Servers
+      package_facts:
+        manager: auto
+
+    - name: Print the list of all installed package names
+      debug:
+        msg: "{{ ansible_facts.packages }}"
+
+    - name: Write the message to a local file (append an existing file)
+      lineinfile:
+        path: "/tmp/all-linux-server-information.json"
+        line: "List of installed packages in the server {{ inventory_hostname }} are {{ ansible_facts.packages | default({}) | to_nice_json }}"
+        insertafter: EOF
+      delegate_to: localhost
